# LocalPoliticsDataCrunching

./: .gitignore  README.md  pyproject.toml
local_politics/: find_precincts_from_boe.py  my_precinct.py  new_voters.py  search_by_name.py  search_precinct.py  young_dems.py  young_voters.py
test_data/: boe_data.csv  voter_data.csv
utils/: filter_dataframe.py
