[tool.poetry]
name = "local-politics"
version = "0.1.0"
description = ""
authors = ["Michael Bending <michael.a.bending@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
